--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
             width: 90%;
             max-width: 500px;
-            margin: 40px auto;
+            margin: 0px auto;
             text-align: center;
             position: relative;
             z-index: 1;
@@ -119,9 +119,10 @@
         /* Additional Styling */
         .header {
             background-color: rgb(238, 46, 123);
-            padding: 10px 20px;
+            padding: 5px 20px;
             text-align: center;
-            position: fixed;
+            position: relative;
+            margin-bottom: 10px;
             width: 100%;
             z-index: 10;
             box-shadow: 0 2px 4px rgba(0, 0, 0,0.1);
@@ -131,7 +132,8 @@
             background-color: rgba(255, 255, 255, 0);
             padding: 5px 10px;
             text-align: center;
-            position: fixed;
+            position: relative;
+            margin-top: 10px;
             width: 100%;
             bottom: 0;
             z-index: 10;
